made some final updates to the site

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,11 +20,11 @@
 				<div class="row py-5">
 					<div class="col-md-8 justify-content-center">
 						<div class="main-message">
-							<h5 class="" style="color: white;"> cooperative </h5>
+							<h5 class="pb-5" style="color: white;"> cooperative </h5>
 							<p class="lead fw-normal" style="color: #49745d;">
-								Genlivet is a group of multidisciplinary 
+								Genlivet is a group of multidisciplinary
 								<br>
-								humans working together on regenerative 
+								humans working together on regenerative
 								<br>
 								solutions, with global implications, locally.
 							</p>
@@ -43,16 +43,20 @@
 			</div>
 		</section>
 
+		<section class="break">
+
+		</section>
+
 		<section class="hero3" id="solutions">
 			<div class="container mx-auto py-5">
 				<div class="main-message py-5">
 					<h5 class="text-center py-5" style="color: white;"> SOLUTIONS </h5>
 					<p class="text-center lead fw-normal py-4" style="color: white;">
-								<b>Genlivet takes the boots on 
-								the ground, <br> grassroots approach 
-								to engage and activate 
-								local <br> actors to find and execute 
-								<span style="color: #aad19e;">regenerative solutions</span> <br>to 
+								<b>Genlivet takes the boots on
+								the ground, <br> grassroots approach
+								to engage and activate
+								local <br> actors to find and execute
+								<span style="color: #aad19e;">regenerative solutions</span> <br>to
 								their local waste problems.
 							</b>
 					</p>
@@ -75,7 +79,7 @@
 				    <div class="col-sm-4 p-0">
 				    	<img class="img-fluid" style="" alt="" src="{{ site.baseurl }}/assets/img/Pics/gallery03.jpg">
 				    </div>
-				
+
 				    <div class="col-sm-4 p-0 d-none d-sm-block">
 				      <img class="img-fluid" style="" alt="" src="{{ site.baseurl }}/assets/img/Pics/gallery04.jpg">
 				    </div>
@@ -111,7 +115,7 @@
 							<p class=" lead fw-normal" style="color: #cfedc5;">
 
 										Regenerative: Is a process originated by an initial investment of resources,<br> labor and energy that generates, as an output, as many necessary inputs <br> as needed to sustain itself.
-							</p>	
+							</p>
 						</div>
 					</div>
 				</div>
@@ -123,21 +127,21 @@
 
 			<div class="container mx-auto py-5">
 				<div class="row py-5">
-					<div class="col-md-8">
+					<div class="col-md-7">
 						<div class="main-message pt-4">
 							<p class="pb-5" style="color: white; font-family: 'Montserrat'"><b>APPROACH</b></p>
 							<p class="lead fw-normal" style="color: white; font-family: 'Montserrat';">
 								<b>
-									We strive to use only 
-									waste materials, identify local waste stream and sources, 
-									and redirect or reduce them by providing alternatives, in favor of a 
+									We strive to use only
+									waste materials, identify local waste stream and sources,
+									and redirect or reduce them by providing alternatives, in favor of a
 									<span style="color: #cfedc5;">circular economy system.</span>
 								</b>
 							</p>
 							<p class="lead fw-normal" style="color: #cfedc5;">
 								Circular Economy System:
-								is an economic system 
-								aimed at eliminating waste 
+								is an economic system
+								aimed at eliminating waste
 								and the continual use of resources.
 							</p>
 						</div>
@@ -152,37 +156,62 @@
 		<footer>
 			<div class="container">
 				<div class="row pt-4">
-					<div class="col-md-2">
-							<img class="brand float-right" style="" alt="" src="{{ site.baseurl }}/assets/img/Logo/logo-icon-green.png">
+					<div class="col-md-1">
+							<img class="brand float-left" style="" alt="" src="{{ site.baseurl }}/assets/img/Logo/logo-icon-green.png">
 					</div>
 
-					<div class="col-md-4 py-2">
+					<div class="col-md-5 py-2">
 							<p class="float-left">
 								<small>
-									GENLIVET 
-									<br>	
-									ATT: TINKERTANK <br>			HORHUSVEJ 5 - 
+									GENLIVET
 									<br>
-									2300 KOBENHAVN S 
+									ATT: TINKERTANK <br>			HORHUSVEJ 5 -
+									<br>
+									2300 KOBENHAVN S
 									<br>
 									CVR 41 61 81 91
 								</small>
 
 							</p>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-2">
+					</div>
+					<div class="col-md-4 float-right pt-2">
+						<form
+						  action="https://formspree.io/f/mdoylddz"
+						  method="POST"
+						>
+							<div class="form-group">
+								<div class="container">
+									<textarea name="message" class="form-control mb-2"rows="2" placeholder="Drop us a line here"></textarea>
+									<button type="submit" class="btn btn-success float-right pt-2">
+										<i class="bi bi-arrow-right-short"></i>
+									</button>
+								</div>
+							</div>
+
+						  <!-- <label>
+						    <input type="email" name="_replyto">
+						  </label> -->
+
+						  <!-- your other form fields go here -->
+
+
+						</form>
+
+
 					</div>
 
 
 				</div>
 			</div>
-			<!-- 
+			<!--
 			<img src="{{ site.baseurl }}/assets/img/iconLogo.svg" class="" alt="{{ site.title }}"> -->
 		</footer>
 
 	</main>
 
-	
+
 
 
 
