--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 	<!--====== Title ======-->
 	<title>{{ page.title }} | {{site.name}}</title>
-	
+
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 
@@ -22,6 +22,9 @@
 
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" >
+
+	<!-- FOnt Style sheet -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 	<!-- AOS -->
 	 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
