made some final updates to the site

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -259,8 +259,8 @@ body {
 }
 
 .bgbreak {
-	background: url('../img/bg.jpg');
-	height: 10%;
+  height: 10%;
+  background-image: url('../img/bg.jpg');  
 }
 
 .hero3 {
