made some final updates to the site

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@
 			</div>
 		</section>
 
-		<section class="bgbreak" style="height: 10%; background-image: url('{{ site.baseurl }}/assets/img/bg.jpg');">
+		<section class="bgbreak" style="height: 10%;">
 
 		</section>
 
